# circuit-dllm

./: .gitignore  README.md
deploy/: run-api.sh  run-contributor-node.sh  run-coordinator-72b-awq.sh  run-coordinator-72b.sh  run-coordinator-mesh.sh  run-mesh.sh  run-node-72b-awq.sh  run-node-72b.sh  run-node.sh  run-orchestrator-72b-awq.sh  run-relay.sh  run-solo-72b.sh  run-stage1.sh  stage-model.sh
docker/: Dockerfile  build.sh  entrypoint.sh
docs/: ARCHITECTURE.md  AWQ_PER_NODE.md  BATCHING.md  BIGGER_MODEL.md  CHAIN_RELAY.md  CONTROL_PLANE_HA.md  CUTOVER_FLOATING.md  EAGLE.md  FLOATING_COORDINATOR.md  JOIN.md  MESH_SESSION_RUNBOOK.md  ONCHAIN_CONTROL_PLANE.md  OPERATING.md  RELAY.md  SCALING.md  SETUP_DESKTOP.md  SETUP_RUNPOD.md  SOLANA_72B_SPECIALIZATION.md  SPEED_ROADMAP.md  TOPOLOGY_AWARE_ROUTING.md  UNIFIED_NODE.md  VERIFICATION.md
engine/: __init__.py  api.py  canonical.py  chain.py  control_server.py  coordinator.py  eagle.py  kv.py  log.py  model.py  registry.py  relay.py  route_provider.py  rtt_probe.py  scheduler.py  shard_fetch.py  specdecode.py  stage.py  stage_worker.py  tensors.py  topology.py  verify.py  wire.py
onchain/: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
onchain/programs/mesh_registry/: Cargo.toml
onchain/programs/mesh_registry/src/: lib.rs
scripts/: bench-mesh.sh  crosspod-test.sh  e2e-multi-orchestrator.sh  e2e-orchestrator.sh  e2e-rehome-http.sh  prov-pod.py  publish-awq-shards.py  slice-awq.py  smoke-submodel.sh  staging-throughput.py  sync-runpod.sh  validate-awq-download.sh  validate-awq-dynamic.sh
(+69 files in other folders)
