[package]
name = "mesh_registry"
version = "0.1.0"
description = "On-chain anchor for the Circuit DLLM control plane (MeshConfig + Node)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mesh_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.1.1"
